; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_lock_graph.c_UnlockLockData.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/transaction/extr_lock_graph.c_UnlockLockData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NUM_LOCK_PARTITIONS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @UnlockLockData to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @UnlockLockData() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i32, i32* @NUM_LOCK_PARTITIONS, align 4
  %3 = sub nsw i32 %2, 1
  store i32 %3, i32* %1, align 4
  br label %4

4:                                                ; preds = %11, %0
  %5 = load i32, i32* %1, align 4
  %6 = icmp sge i32 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %4
  %8 = load i32, i32* %1, align 4
  %9 = call i32 @LockHashPartitionLockByIndex(i32 %8)
  %10 = call i32 @LWLockRelease(i32 %9)
  br label %11

11:                                               ; preds = %7
  %12 = load i32, i32* %1, align 4
  %13 = add nsw i32 %12, -1
  store i32 %13, i32* %1, align 4
  br label %4

14:                                               ; preds = %4
  %15 = call i32 (...) @UnlockBackendSharedMemory()
  ret void
}

declare dso_local i32 @LWLockRelease(i32) #1

declare dso_local i32 @LockHashPartitionLockByIndex(i32) #1

declare dso_local i32 @UnlockBackendSharedMemory(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
